11882: Bugfix: Mobile Web - Icon overlapped when 2FA has been disabled

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1208,9 +1208,9 @@ ul, li {
     background-color: #eb4444;
 }
 .mobile.red-check .mobile.fm-icon.check-mark {
-    background-image: none;
+    background: none;
     font-size: 22px;
-    line-height: 19px;
+    line-height: 18px;
     color: #fff;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
